@@ -2,6 +2,8 @@
   - add a 'testing' artifact with a JdbiRule for JUnit tests
   - @SqlScript to execute multiple statements
   - add a ResultProducers allowNoResults option in case you may or may not get a result set
+  - add a TemplateEngine based on java.text.MessageFormat
+  - allow absence of 'value' on @MaxRows and validate its (lack of) use on SqlObjects
 
 3.1.1
   - Improve IBM JDK compatibility with default methods
